projects/projects.css
*{
    margin: 0;
    box-sizing: border-box;
}

a {
    color: blanchedalmond;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

/* List of projects styling */
#projects-list-ul {
    list-style-type: circle;
}

#projects-list-li {
    margin-bottom: 10%;
    font-size: calc(2px + 1.5vw);
}

/* Calc styling */
#calc-buttons {
    margin-left: 20%;
}

#calc-title{
    margin: 2vw 0;
    text-align: center;
    font-size: calc(2px + 4vw);
    color: darkblue;
}

#output {
    margin-left: 2%;
    background-color: white;
    margin-top: 2%;
    font-size: calc(2px + 2vw);
    align-items: center;
    padding-left: 1%;
    border: 2px solid darkblue;
    width: fit-content;
    height: fit-content;
}

button {
    border: 2px solid darkblue;
    font-size: calc(2px + 2vw);
}

#first-number, #second-number {
    /* max-width: %; */
    height: 20%;
    margin-bottom: 2%;
    border: 2px solid darkblue;
    font-size: calc(2px + 2vw);
}

#calc-input {
    display: flex;
    flex-direction: column;
    margin-left: 2%;
}

#calc-wrapper {
    background-color: aqua;
    width: 100%;
    align-items: center;
    padding: 2vh 2vw;
    align-self: center;
    width: 60%;
    height: 100%;
    margin: 1vh 1vw;
}


/*Centering the page*/
#page-wrapper{
    width: 80vw;
    margin: 0 auto;
}

/*Header starts*/
header{
    display: flex;
    flex-direction: column;
    padding: 1vh 1vw;
    background-color: darkgreen;
    color: blanchedalmond;
    align-items: left;
}
/*Header ends*/

/*Two column container starts:*/
#container{
    width: 100%;
    display: flex;
    flex-direction: row;
    position: relative;
    background-color: rgb(208, 255, 172);
}

nav{
    width: 30%;
}

nav ul{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    background-color: rgb(151, 254, 73);
    font-size: calc(2px + 2vw);
    text-align: center;
    list-style: none;
    padding-left: 0;
}

nav li{
    font-size: calc(3px + 3vw);
    width: 90%;
    background-color:darkgreen;
    padding: 2vh 0;
    margin: 5vh auto;
}


nav a{
    text-decoration: none;
}

main{
    display: flex;
    flex-direction: column;
    width:70%;
    background-color: rgb(208, 255, 172);
    height: 100vh;
}


main p{
    margin: 0 1vw;
    font-size: calc(2px + 2vw);
}

#profile-image{
    max-width: 100%;
}

#main{
    width: 70%;
    display: flex;
    flex-direction: row;
    padding: 2vh 2vw;
}

#main-text{
    align-self: center;
    width: 90%;
    margin: 1vh 1vw;
}

#main-title{
    margin: 2vw 0;
    text-align: center;
    font-size: calc(2px + 4vw);
    color: darkgreen;
}
/*Two column container ends*/

footer{
    background-color: darkgreen;
    color: blanchedalmond;
    padding: 1vh 1vw;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

#time-date{
    width: 25%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: baseline;
}

footer a{
    color: blanchedalmond;
}

@media screen and (max-width: 900px) {
    header{
        align-items: center;
    }

    #container{
        width: 100%;
        height: 100vh;
        flex-direction: column;
    }

    nav{
        width: 100%;
    }

    nav ul{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        background-color: rgb(151, 254, 73);
        list-style: none;
        padding-left: 0;
    }

    nav li{
        font-size: calc(2px + 1.5vw);
        background-color:darkgreen;
        padding: 1% .5%;
        margin: 1% .5%;
    }

    nav a{
        text-decoration: none;
    }

    main{
        display: flex;
        flex-direction: column;
        width:100%;
        height: 100vh;
        background-color: rgb(208, 255, 172);
    }

    main p{
        margin: 2% 2%;
        font-size: calc(2px + 3vw);
    }

    #profile-image{
        max-width: 100%;
    }

    #main{
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    #main-text{
        align-self: center;
        width: 100%;
        margin: 1vh 1vw;
    }

    #main-title{
        text-align: center;
        color: darkgreen;
    }
}

@media screen and (max-width: 749px) {
    header{
        align-items: center;
    }

    #container{
        width: 100%;
        height: 100vh;
        flex-direction: column;
    }

    nav{
        width: 100%;
    }

    nav ul{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        background-color: rgb(151, 254, 73);
        list-style: none;
        padding-left: 0;
    }

    nav li{
        font-size: calc(2px + 1.5vw);
        background-color:darkgreen;
        padding: 1% .5%;
        /* margin: 1% .5%; */
    }

    nav a{
        text-decoration: none;
    }

    main{
        display: flex;
        flex-direction: column;
        width:100%;
        height: 100vh;
        background-color: rgb(208, 255, 172);
    }

    main p{
        /* margin: 2% 2%; */
        font-size: calc(2px + 3vw);
    }

    #profile-image{
        max-width: 100%;
    }

    #main{
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    #main-text{
        align-self: center;
        width: 100%;
        /* margin: 1vh 1vw; */
    }

    #main-title{
        text-align: center;
        color: darkgreen;
    }
}

@media screen and (max-width: 1000px) {
    header{
        align-items: center;
    }

    #container{
        width: 100%;
        height: 100vh;
        flex-direction: column;
    }

    nav{
        width: 100%;
    }

    nav ul{
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        background-color: rgb(151, 254, 73);
        list-style: none;
        padding-left: 0;
    }

    nav li{
        font-size: calc(2px + 1.5vw);
        background-color:darkgreen;
        padding: 1% .5%;
        /* margin: 1% .5%; */
    }

    nav a{
        text-decoration: none;
    }

    main{
        display: flex;
        flex-direction: column;
        width:100%;
        height: 100vh;
        background-color: rgb(208, 255, 172);
    }

    main p{
        /* margin: 2% 2%; */
        font-size: calc(2px + 3vw);
    }

    #profile-image{
        max-width: 100%;
    }

    #main{
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        height: 100vh;
    }

    #main-text{
        align-self: center;
        width: 100%;
        /* margin: 1vh 1vw; */
    }

    #main-title{
        text-align: center;
        color: darkgreen;
    }
}

